<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/mainActivity">

    <Button
            android:text="@string/getWordsString"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/showWordsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

    <Button
            android:text="@string/getAmountString"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/chooseAmountButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

    <TextView
            android:ems="10"
            android:id="@+id/textViewNumber"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_horizontal"
            android:longClickable="false"
            android:linksClickable="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:gravity="center"/>

    <Button
            android:text="@string/changeBaseString"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/changeBaseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/showWordsButton"
            android:layout_marginTop="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>